--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -753,6 +753,13 @@
     "data.loc[data.place.str.contains(\"Alaska\") & (data.alert.notnull()) , \n",
     "        ['alert', 'mag', 'magType', 'title', 'tsunami', 'type'] ]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "edjkghuiodshgoisdg\n"
+   ]
   }
  ],
  "metadata": {
