added stuff form

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -17,12 +17,13 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from typing import List\n",
-    "from sqlite3 import connect\n"
+    "from sqlite3 import connect\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -239,7 +240,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -297,7 +298,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -346,7 +347,7 @@
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +437,7 @@
        "15       M 2.0 - 156km WNW of Haines Junction, Canada  2.00"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +521,7 @@
        "5263  earthquake  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +590,7 @@
        "5263  earthquake  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +744,7 @@
        "9133        1  earthquake  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +759,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "edjkghuiodshgoisdg\n"
+    "Regular Expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>magType</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tsunami</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1465</th>\n",
+       "      <td>green</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>mw</td>\n",
+       "      <td>M 3.8 - 109km WNW of Trinidad, CA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2414</th>\n",
+       "      <td>green</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>mw</td>\n",
+       "      <td>M 3.8 - 5km SW of Tres Pinos, CA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      alert   mag magType                              title  tsunami  \\\n",
+       "1465  green  3.83      mw  M 3.8 - 109km WNW of Trinidad, CA        0   \n",
+       "2414  green  3.83      mw   M 3.8 - 5km SW of Tres Pinos, CA        1   \n",
+       "\n",
+       "            type  \n",
+       "1465  earthquake  \n",
+       "2414  earthquake  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[(data.place.str.contains(r'CA|California$')) &\n",
+    "        (data.mag > 3.8) , \n",
+    "        ['alert', 'mag', 'magType', 'title', 'tsunami', 'type']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choosing in Between Values\n"
    ]
   }
  ],
