--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -842,11 +842,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>magType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>mw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1465</th>\n",
+       "      <td>green</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>mw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2414</th>\n",
+       "      <td>green</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>mw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4988</th>\n",
+       "      <td>green</td>\n",
+       "      <td>4.41</td>\n",
+       "      <td>mw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6307</th>\n",
+       "      <td>green</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>mwb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8257</th>\n",
+       "      <td>green</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>mwb</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      alert   mag magType\n",
+       "995     NaN  3.35      mw\n",
+       "1465  green  3.83      mw\n",
+       "2414  green  3.83      mw\n",
+       "4988  green  4.41      mw\n",
+       "6307  green  5.80     mwb\n",
+       "8257  green  5.70     mwb"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Choosing in Between Values\n"
+    "# Choosing in Between Values\n",
+    "data.loc[data.magType.isin([\"mw\", \"mwb\"]), [\"alert\" , \"mag\" , \"magType\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>magType</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tsunami</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2409</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.26</td>\n",
+       "      <td>ml</td>\n",
+       "      <td>M -1.3 - 41km ENE of Adak, Alaska</td>\n",
+       "      <td>0</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5263</th>\n",
+       "      <td>red</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>M 7.5 - 78km N of Palu, Indonesia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>earthquake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     alert   mag magType                              title  tsunami  \\\n",
+       "2409   NaN -1.26      ml  M -1.3 - 41km ENE of Adak, Alaska        0   \n",
+       "5263   red  7.50     mww  M 7.5 - 78km N of Palu, Indonesia        1   \n",
+       "\n",
+       "            type  \n",
+       "2409  earthquake  \n",
+       "5263  earthquake  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# grabbing the lowest and highest indexes\\\n",
+    "data.loc[[data.mag.idxmin(), data.mag.idxmax()] , ['alert', 'mag', 'magType', 'title', 'tsunami', 'type']\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "9327    False\n",
+       "9328    False\n",
+       "9329    False\n",
+       "9330    False\n",
+       "9331    False\n",
+       "Name: mag_negative, Length: 9332, dtype: bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding or removing data\n",
+    "df = data.copy()\n",
+    "df[\"mag_negative\"] = df.mag < 0\n",
+    "df[\"mag_negative\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alert</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>time</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tsunami</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>1539475168010</td>\n",
+       "      <td>M 1.4 - 9km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>1539475129610</td>\n",
+       "      <td>M 1.3 - 9km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>1539475062610</td>\n",
+       "      <td>M 3.4 - 8km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>1539474978070</td>\n",
+       "      <td>M 0.4 - 9km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>1539474716050</td>\n",
+       "      <td>M 2.2 - 10km NW of Avenal, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9327</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>1537230228060</td>\n",
+       "      <td>M 0.6 - 9km ENE of Mammoth Lakes, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9328</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1537230135130</td>\n",
+       "      <td>M 1.0 - 3km W of Julian, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9329</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>1537229908180</td>\n",
+       "      <td>M 2.4 - 35km NNE of Hatillo, Puerto Rico</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9330</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>1537229545350</td>\n",
+       "      <td>M 1.1 - 9km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9331</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>1537228864470</td>\n",
+       "      <td>M 0.7 - 9km NE of Aguanga, CA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9332 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     alert   mag           time                                     title  \\\n",
+       "0      NaN  1.35  1539475168010             M 1.4 - 9km NE of Aguanga, CA   \n",
+       "1      NaN  1.29  1539475129610             M 1.3 - 9km NE of Aguanga, CA   \n",
+       "2      NaN  3.42  1539475062610             M 3.4 - 8km NE of Aguanga, CA   \n",
+       "3      NaN  0.44  1539474978070             M 0.4 - 9km NE of Aguanga, CA   \n",
+       "4      NaN  2.16  1539474716050             M 2.2 - 10km NW of Avenal, CA   \n",
+       "...    ...   ...            ...                                       ...   \n",
+       "9327   NaN  0.62  1537230228060      M 0.6 - 9km ENE of Mammoth Lakes, CA   \n",
+       "9328   NaN  1.00  1537230135130               M 1.0 - 3km W of Julian, CA   \n",
+       "9329   NaN  2.40  1537229908180  M 2.4 - 35km NNE of Hatillo, Puerto Rico   \n",
+       "9330   NaN  1.10  1537229545350             M 1.1 - 9km NE of Aguanga, CA   \n",
+       "9331   NaN  0.66  1537228864470             M 0.7 - 9km NE of Aguanga, CA   \n",
+       "\n",
+       "      tsunami  \n",
+       "0           0  \n",
+       "1           0  \n",
+       "2           0  \n",
+       "3           0  \n",
+       "4           0  \n",
+       "...       ...  \n",
+       "9327        0  \n",
+       "9328        0  \n",
+       "9329        0  \n",
+       "9330        0  \n",
+       "9331        0  \n",
+       "\n",
+       "[9332 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dropping Columns\n",
+    "cols_to_drop = [col for col in df.columns \n",
+    "    if col not in [\n",
+    "    'alert', 'mag', 'title', 'time', 'tsunami']\n",
+    "    ]\n",
+    "\n",
+    "df.drop(columns=cols_to_drop , inplace=False)"
    ]
   }
  ],
