--- a/pyton_exc.ipynb
+++ b/pyton_exc.ipynb
@@ -2,33 +2,292 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    ""
+    "import pandas as pd \n",
+    "import seaborn as sns \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>TMAX</th>\n",
+       "      <th>TMIN</th>\n",
+       "      <th>TOBS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2018-10-16 00:00:00</td>\n",
+       "      <td>16.829032</td>\n",
+       "      <td>7.561290</td>\n",
+       "      <td>10.022581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2018-10-01 00:00:00</td>\n",
+       "      <td>7.800000</td>\n",
+       "      <td>-1.100000</td>\n",
+       "      <td>-1.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2018-10-08 12:00:00</td>\n",
+       "      <td>12.750000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>5.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2018-10-16 00:00:00</td>\n",
+       "      <td>16.100000</td>\n",
+       "      <td>6.700000</td>\n",
+       "      <td>8.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2018-10-23 12:00:00</td>\n",
+       "      <td>21.950000</td>\n",
+       "      <td>13.600000</td>\n",
+       "      <td>16.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2018-10-31 00:00:00</td>\n",
+       "      <td>26.700000</td>\n",
+       "      <td>17.800000</td>\n",
+       "      <td>21.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.714962</td>\n",
+       "      <td>6.513252</td>\n",
+       "      <td>6.596550</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date       TMAX       TMIN       TOBS\n",
+       "count                   31  31.000000  31.000000  31.000000\n",
+       "mean   2018-10-16 00:00:00  16.829032   7.561290  10.022581\n",
+       "min    2018-10-01 00:00:00   7.800000  -1.100000  -1.100000\n",
+       "25%    2018-10-08 12:00:00  12.750000   2.500000   5.550000\n",
+       "50%    2018-10-16 00:00:00  16.100000   6.700000   8.300000\n",
+       "75%    2018-10-23 12:00:00  21.950000  13.600000  16.100000\n",
+       "max    2018-10-31 00:00:00  26.700000  17.800000  21.700000\n",
+       "std                    NaN   5.714962   6.513252   6.596550"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wide = pd.read_csv('datasets/chap3/wide_data.csv', parse_dates=['date'])\n",
+    "wide.describe(include='all', datetime_is_numeric=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>datatype</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>21.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>8.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>TOBS</td>\n",
+       "      <td>13.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10-02</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>23.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-10-02</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>13.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>2018-10-30</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>2018-10-30</td>\n",
+       "      <td>TOBS</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>2018-10-31</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>12.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>2018-10-31</td>\n",
+       "      <td>TMIN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>2018-10-31</td>\n",
+       "      <td>TOBS</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date datatype  value\n",
+       "0  2018-10-01     TMAX   21.1\n",
+       "1  2018-10-01     TMIN    8.9\n",
+       "2  2018-10-01     TOBS   13.9\n",
+       "3  2018-10-02     TMAX   23.9\n",
+       "4  2018-10-02     TMIN   13.9\n",
+       "..        ...      ...    ...\n",
+       "88 2018-10-30     TMIN    2.2\n",
+       "89 2018-10-30     TOBS    5.0\n",
+       "90 2018-10-31     TMAX   12.2\n",
+       "91 2018-10-31     TMIN    0.0\n",
+       "92 2018-10-31     TOBS    0.0\n",
+       "\n",
+       "[93 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "long_df = pd.read_csv('datasets/chap3/long_data.csv', usecols=[\"date\",\"datatype\", \"value\"], parse_dates=[\"date\"])[[\"date\", \"datatype\", \"value\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('gst')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0656384006222c93124fb804bd1eb48c1757441eb338bd6daa7f08a14c55e81e"
+   }
   }
  },
  "nbformat": 4,
