--- a/pyton_exc.ipynb
+++ b/pyton_exc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,8 @@
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "import requests \n",
-    "import pprint"
+    "import pprint\n",
+    "import requests"
    ]
   },
   {
